java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unusedImports/InnersOnDemand2.java
<warning descr="Unused import statement">import <error descr="Class 'OuterClass' is in the default package">OuterClass</error>.*;</warning>

class OuterClass {
  class Inner { }
}